# HTPolyNet

./: .buildinfo  .gitignore  HTPolyNet.html  HTPolyNet.py  HTPolyNetPackage.html  MANIFEST.in  README.md  crosslinking algorithm.xmind  data_store.sqlite  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: sphinx.yml
Docs/source/: conf.py  install.rst
Examples/DA3/: GMA-un.mol2  options.txt
Examples/DA3-layer/: options.txt
Examples/DGEBA-PACM/: DGE.mol2  PAC.mol2  options.txt
Examples/Example1/: README.md
Examples/FDE-DFDA/: FDE-un.mol2  options.txt
Examples/mST-mST/: mST-un.mol2  options.txt
HTPolyNet/: HTPolyNet.py  __init__.py  ambertools.py  analyze.py  banner.py  bondlist.py  bondtemplate.py  chain.py  checkpoint.py  command.py  configuration.py  coordinates.py  countTime.py  createRctMol.py  cure.py  curecontroller.py  dataframetools.py  dirTree.py  driver.py  endCapping.py  expandreactions.py  extendSys.py  genBonds.py  generateChargeDb.py  generateTypeInfo.py  getCappingParam.py  groInfo.py  gromacs.py  inputcheck.py  libraries.py  linkcell.py  matrix4.py  md.py  mergeTop.py  mol2Info.py  molRctInfo.py  molecule.py  oligo.py  parameters.py  parameters_old.py  (+25 more)
HTPolyNet/Scripts/: HTPolyNet
HTPolyNet/Source/: HTPolyNet.py  countTime.py  endCapping.py  genBonds.py  generateChargeDb.py  groInfo.py  md.py  molRctInfo.py  readMol.py
Templates/Gromacs_mdp/: npt-cl.mdp
Templates/Monomer-mol2/: PACM.mol2
Templates/cfg/: VEA-VEB-STY-example.cfg
Tests/: README.md  VEA.itp  htpolynet-tests.tgz  init.gro  init.top  test.gro  test.top
Tests/JSONcfg/: json_test.py  test.json
Tests/YAMLcfg/: test.yaml  yamltest.py
Tests/ambertools/: #FDE-p-minimize.edr.1#  #FDE-p-minimize.log.1#  #FDE-p.gro.2#  ANTECHAMBER_GAS_AT.AC  FDE-p-minimize.tpr  FDE-p-minimize.trr  FDE-p-tleap.crd  FDE-p.frcmod  FDE-p.top  FDE.mol2  complete-FDE-p.top  parm.py
Tests/cfg/: FDE-DFDA.yaml  cfg_test.py  reyamled.yaml  test.json  test.yaml
Tests/coord/: c.py  cfareadcoord.py  out.mol2  t.mol2  test.gro  test.mol2  test2.mol2
Tests/df/: df.py
Tests/enum/: enumtest.py
Tests/gaff/: ambertest.py
Tests/gmxenergy/: #test-out.xvg.5#  energy.xvg  g.py
Tests/linkcell/: init.gro  lctest.py
Tests/min/: options.txt
Tests/oligo/: FDE-DFDA.yaml  htpolynet_runtime.log.bak
Tests/ring/: a_seg.gro  linkcell-0.50.grx  pierced.gro  ring-30-31=11-14-15-16-17.gro  ringtest.py
Tests/stereoflip/: FDE.itp
Tests/stereoflip copy/: sftest.py
Tests/symm/: #nvt.edr.2#  #nvt.log.1#  #nvt.log.2#  #nvt.tpr.1#  #nvt1000.trr.2#  FDE-DFDA.yaml  mdout.mdp  npt-1.mdp  nvt.cpt  nvt.tpr  s.py
_modules/: index.html
_sources/: HTPolyNetPackage.rst.txt  index.rst.txt  install.rst.txt
_static/: documentation_options.js
cell-separate/: cell.py  init-1.gro
docs/: Library.rst  Makefile  README.rst  crosslinking algorithm.xmind  make.bat  modules.rst  requirements.txt
example-tutorials/: index.html
lammps-module/: amber_to_lammps.py  htpnlammps_main.py  lammps_module_main.py
mh-cl/: README.md  __init.py__  clean.sh  createRctMol.py  extendSys.py  genBonds.py  generateChargeDb.py  generateTypeInfo.py  groInfo.py  init-1.itp  init-1.top  init.gro  init.top  main.py  md.py  mergeTop.py  mol2Info.py  molRctInfo.py  nohup.out  parameters - bk.py  parameters.py  prepareParam.py  processTop.py  readGro.py  readMol.py  readParameters.py  readTop-2.py  readTop.py  readTop2.py  searchBonds.py  testCase.py  tmp.itp  topInfo.py
mol2tolammps/: BisPropyleneBisA.mol2  README  amber2lammps.py3  mol2tolammps.sh
reference-guide/: CURE-algorithm.html  index.html  stereoisomers.html  symmetry-equivalence.html
reference-materials/: index.html
references/: index.html
structures/: VEB.mol2
tests/: conftest.py
user-guide/: configuration-files.html  index.html  molecular-structure-inputs.html  program-flow.html  things-to-know.html  usage.html
(+2412 files in other folders)
