[metadata]
name = HTPolyNet
version = 0.0.1
description = 'Automated MD System Builder for Amorphous Network Polymers'
url = 'https://github.com/AbramsGroup/HTPolyNet'
author = 'Ming Huang, Cameron Abrams'
author_email = 'mh3429@drexel.edu,cfa22@drexel.edu'
license = 'MIT'

[options]
packages = HTPolyNet, Library
install_requires =
    requests
    importlib
    numpy
    pandas
    scipy
    parmed
    networkx
include_package_data = True

; Create the "htpolynet" executable
[options.entry_points]
console_scripts =
        htpolynet = HTPolyNet.HTPolyNet:cli