[metadata]
name = HTPolyNet
version = 1.0.5
description = 'Automated MD System Builder for Amorphous Network Polymers'
url = 'https://github.com/AbramsGroup/HTPolyNet'
author = 'Ming Huang, Cameron Abrams'
author_email = 'mh3429@dragons.drexel.edu,cfa22@drexel.edu'
license = 'MIT'
classifiers=['Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10']

[options]
packages = HTPolyNet, Library
install_requires =
    requests
    numpy
    pandas
    scipy
    parmed
    networkx
    pyyaml
    gputil
include_package_data = True

; Create the "htpolynet" executable
[options.entry_points]
console_scripts =
        htpolynet = HTPolyNet.driver:cli

[tool:pytest]
testpaths = tests/unit tests/integration